# Rust-Restaurant-Api-Backend

./: .env  Cargo.toml  README.md  Rocket.toml  order_database.sqlite
.github/workflows/: build.yaml  linter.yaml  security.yaml  unit_tests.yaml
migrations/: 20220515082502_create_tables.sql  20220516013836_insert_data.sql
src/: db.rs  error_handler.rs  handlers.rs  main.rs  models.rs
