[package]
name = "rust_restaurant_api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.simplelog]
version = "0.12.0"

[dependencies.serde_with]
version = "1.13.0"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["migrate", "offline", "macros"]

[dependencies.rocket]
version  = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]